# simple-register

./: .gitignore  CMakeLists.txt  README.md  apSimpleRegister.cpp  apSimpleRegister.hpp  main.cpp  simpleregister.kdev4
inc/: apExceptions.hpp  apSimpleRegister.hpp
param/: 2DMIBspAffineASGradDescent.txt  2DMIBspAffineGradDescent.txt  2DMIBspBspASGradDescent.txt  2DMIBspBspGradDescent.txt  2DMIBspRigidASGradDescent.txt  2DMIBspRigidGradDescent.txt  2DMINNAffineASGradDescent.txt  2DMINNAffineGradDescent.txt  2DMINNBspASGradDescent.txt  2DMINNBspGradDescent.txt  2DMINNRigidASGradDescent.txt  2DMINNRigidGradDescent.txt  2DNMIBspAffineASGradDescent.txt  2DNMIBspAffineGradDescent.txt  2DNMIBspBspASGradDescent.txt  2DNMIBspBspGradDescent.txt  2DNMIBspRigidASGradDescent.txt  2DNMIBspRigidGradDescent.txt  2DNMINNAffineASGradDescent.txt  2DNMINNAffineGradDescent.txt  2DNMINNBspASGradDescent.txt  2DNMINNBspGradDescent.txt  2DNMINNRigidASGradDescent.txt  2DNMINNRigidGradDescent.txt
src/: apExceptions.cpp  apSimpleRegister.cpp  main.cpp
utils/: apExceptions.cpp  itkCommandLineArgumentParser.cpp
